@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.40 2004/08/23 03:32:12 jlam Exp $
+# $NetBSD: Makefile,v 1.41 2004/09/11 19:01:40 jlam Exp $
 #
 # NOTE: If you update this package, it is *mandatory* that you update
 # 	pkgsrc/pkgtools/libnbcompat/files/README to reflect the actual
 #	list of tested and supported platforms.
 #
 
-DISTNAME=		libnbcompat-20040822
+DISTNAME=		libnbcompat-20040911
 CATEGORIES=		pkgtools
 MASTER_SITES=		# empty
 DISTFILES=		# empty
