@@ -1,4 +1,4 @@
-$NetBSD: README,v 1.10 2004/08/23 03:32:12 jlam Exp $
+$NetBSD: README,v 1.11 2004/09/11 19:01:40 jlam Exp $
 
  0 Introduction
  ==============
@@ -44,24 +44,12 @@ breakage seep in.  Proper methodology for updating this package is:
 *NOTE* the most recent libnbcompat.
 *NOTE*
 
-libnbcompat-20040822 has been tested to build and install correctly
+libnbcompat-20040911 has been tested to build and install correctly
 on the following operating systems:
 
 	FreeBSD-4.8/i386		<jlam@NetBSD.org>
-	FreeBSD-5.1/alpha		<grant@NetBSD.org>
-	IRIX 6.5			<schmonz@NetBSD.org>
-	MacOS X 10.2.8			<jlam@NetBSD.org>
-	MacOS X 10.3.5			<schmonz@NetBSD.org>
-	MS Interix 3.5			<schmonz@NetBSD.org>
-	NetBSD-1.5/i386			<cgd@NetBSD.org>
 	NetBSD-1.6.2/i386		<jlam@NetBSD.org>
-	NetBSD-2.0_BETA/i386		<schmonz@NetBSD.org>
-	Red Hat Linux 6.0/i386		<cgd@NetBSD.org>
-	Red Hat Linux 7.2/i386		<cgd@NetBSD.org>
-	Red Hat Linux 7.3/i386		<cgd@NetBSD.org>
-	Solaris 2.6/sparc		<cgd@NetBSD.org>
-	Solaris 8/sparc			<cgd@NetBSD.org>
-	Solaris 9/sparc			<grant@NetBSD.org>
+	Solaris 9/sparc			<salo@NetBSD.org>
 
 
  3 Usage
