@@ -1,8 +1,8 @@
-dnl $NetBSD: configure.ac,v 1.49 2004/08/23 03:32:12 jlam Exp $
+dnl $NetBSD: configure.ac,v 1.50 2004/09/11 19:01:40 jlam Exp $
 
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.52)
-AC_INIT([libnbcompat], [20040822], [grant@NetBSD.org])
+AC_INIT([libnbcompat], [20040911], [grant@NetBSD.org])
 AC_CONFIG_HEADER(nbcompat/config.h)
 AC_ARG_PROGRAM
 
